--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>Sample Page</title>
 </head>
 <body>
-<h1>これはテストです。</h1>
-<p>これはテストなのです。</p>
+<h1>サンプルページ</h1>
+<p>ようこそ！サンプルページへ</p>
+<ul>
+	<li>テスト1</li>
+	<li>テスト2</li>
+	<li>テスト3</li>
+</ul>
 </body>
 </html>
