2017年最初のコミットですぅ、（泣）

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <h1>サンプルページ</h1>
 <p>ようこそ！サンプルページへ</p>
 <ul>
-	<li>テスト1</li>
-	<li>テスト2</li>
-	<li>テスト3</li>
+	<li>2017/01/01 新年あけましておめでとうございます！</li>
+	<li>2016/12/31 良いお年を！</li>
 </ul>
 </body>
 </html>
