--- a/button.html
+++ b/button.html
@@ -7,10 +7,10 @@
 <body>
 <div id="box1">
 	<div id="box2">
-		box2
+		2016年
 	</div><!-- /#box2 -->
 	<div id="box3">
-		box3
+		良いお年を！
 	</div><!-- /#box3 -->
 </div><!-- /#box1 -->
 <button id="btn">
@@ -22,9 +22,9 @@
 		var box1 = document.querySelector("#box1");
 			box1.style.color = 'red';
 		var box2 = document.querySelector("#box2");
-			box2.textContent = "変更です！";
+			box2.textContent = "2017年";
 		var box3 = document.querySelector("#box3");
-			box3.textContent = "変更完了！";
+			box3.textContent = "新年あけましておめでとうございます！";
 	}
 	Btn.onclick = function() {
 		test();
