--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>サンプルページ</h1>
 <p>ようこそ！サンプルページへ</p>
 <ul>
+	<li>2017/01/07 七草粥をいただきました。</li>
 	<li>2017/01/01 新年あけましておめでとうございます！</li>
 	<li>2016/12/31 良いお年を！</li>
 </ul>
